* Updated JFoenix version to 9.0.10 * Fixed tooltip positions