@@ -19,7 +19,7 @@ repositories {
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'com.jfoenix:jfoenix:9.0.9'
+    implementation 'com.jfoenix:jfoenix:9.0.10'
 }
 
 javafx{
@@ -36,6 +36,7 @@ run {
             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
             "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix",
             "--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix",
+            "--add-opens=java.base/java.lang.reflect=com.jfoenix",
     ]
 }
 
@@ -53,6 +54,7 @@ jlink{
                 "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
                 "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
                 "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix",
+                "--add-opens=java.base/java.lang.reflect=com.jfoenix",
 
         ]
     }
